[metadata]
name = hm
version = 0.0.4
url = https://github.com/thorwhalen/hm
platforms = any
description_file = README.md
root_url = https://github.com/thorwhalen/
license = apache-2.0
author = Thor Whalen
description = Mnemonic tools
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = hm

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

